@@ -1,5 +1,9 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* gnome-remote.[ch]: Removed.
+
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
 	* gnome-program.[ch]: Updated copyright info and use
 	"This file is part of GNOME 2.0" to indicate that it's part
 	of the frozed API.
